force-app/main/default/objects/Booking__c/fields/Account_Holder__c.field-meta.xml
<CustomField>
    <fullName>Account_Holder__c</fullName>
    <formula>Unit__r.Legal_Entity__r.Account_Holder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Holder</label>
    <type>Text</type>
</CustomField>