force-app/main/default/objects/Booking__c/fields/Account_Name_Service_Tax__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Service_Tax__c</fullName>
    <label>Account Name (VAT)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>