force-app/main/default/objects/Booking__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <label>Account Number (Flat Cost)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>