force-app/main/default/objects/Booking__c/fields/Advance_Payments__c.field-meta.xml
<CustomField>
    <fullName>Advance_Payments__c</fullName>
    <formula>IF(
    ((Paid_Percentage__c * 100) &gt; 100), 
    MAX(0,(Agreement_Value__c - Milestone_Due_Till_Date__c)), 
    MAX(0,(Total_On_Account_Money_With_Registration__c - Milestone_Due_Till_Date__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advance Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>