force-app/main/default/objects/Booking__c/fields/Agreement_Value__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Value__c</fullName>
    <label>Purchase Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>