force-app/main/default/objects/Booking__c/fields/Agreement_Value_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Value_Arabic__c</fullName>
    <label>Purchase Price_Arabic</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>