force-app/main/default/objects/Booking__c/fields/Agreement_Value_Discounted__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Value_Discounted__c</fullName>
    <label>Agreement Value (D)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>