force-app/main/default/objects/Booking__c/fields/Allow_Payment_Request__c.field-meta.xml
<CustomField>
    <fullName>Allow_Payment_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Payment Request</label>
    <type>Checkbox</type>
</CustomField>