force-app/main/default/objects/Booking__c/fields/Altered_Area__c.field-meta.xml
<CustomField>
    <fullName>Altered_Area__c</fullName>
    <label>Altered Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>