force-app/main/default/objects/Booking__c/fields/Amount_Paid_by_Customer__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid_by_Customer__c</fullName>
    <label>Forfeiture  Amount Paid by Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>