force-app/main/default/objects/Booking__c/fields/Amount_Transferred_to_Registration__c.field-meta.xml
<CustomField>
    <fullName>Amount_Transferred_to_Registration__c</fullName>
    <label>Amount Transferred to Registration</label>
    <summarizedField>Registration_Payment_Account__c.Amount__c</summarizedField>
    <summaryForeignKey>Registration_Payment_Account__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>