force-app/main/default/objects/Booking__c/fields/Anticipated_Completion_Date_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Completion_Date_Arabic__c</fullName>
    <formula>Unit__r.Tower__r.Date_of_Completion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anticipated Completion Date_Arabic</label>
    <type>Date</type>
</CustomField>