force-app/main/default/objects/Booking__c/fields/Applicable_Offers__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Offers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicable Offers</label>
    <referenceTo>Offers__c</referenceTo>
    <relationshipLabel>Booking</relationshipLabel>
    <relationshipName>Booking</relationshipName>
    <type>Lookup</type>
</CustomField>