force-app/main/default/objects/Booking__c/fields/Applicant_2_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_2_Name__c</fullName>
    <label>Applicant 2 Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>