force-app/main/default/objects/Booking__c/fields/Applicant_4_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_4_Name__c</fullName>
    <label>Applicant 4 Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>