force-app/main/default/objects/Booking__c/fields/Approve_Comment__c.field-meta.xml
<CustomField>
    <fullName>Approve_Comment__c</fullName>
    <label>Sales Team Change Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>