force-app/main/default/objects/Booking__c/fields/As_On_Date_Due_for_reporting__c.field-meta.xml
<CustomField>
    <fullName>As_On_Date_Due_for_reporting__c</fullName>
    <formula>As_On_Date_Due_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>As On Date Due for reporting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>