force-app/main/default/objects/Booking__c/fields/Audit_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Audit_Approval_Date__c</fullName>
    <label>Audit Approval Date</label>
    <type>Date</type>
</CustomField>