force-app/main/default/objects/Booking__c/fields/Audit_Comments__c.field-meta.xml
<CustomField>
    <fullName>Audit_Comments__c</fullName>
    <description>This is a mandatory field to be captured by Audit when SPA Status is set to Audit rejected.</description>
    <label>Audit Comments</label>
    <type>TextArea</type>
</CustomField>