force-app/main/default/objects/Booking__c/fields/Audit_comments_for_resubmission__c.field-meta.xml
<CustomField>
    <fullName>Audit_comments_for_resubmission__c</fullName>
    <label>Audit comments for resubmission</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>