force-app/main/default/objects/Booking__c/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <label>Bank Name (Flat Cost)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>