force-app/main/default/objects/Booking__c/fields/Bank_Address__c.field-meta.xml
<CustomField>
    <fullName>Bank_Address__c</fullName>
    <formula>Unit__r.Legal_Entity__r.RDS_Address1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Address</label>
    <type>Text</type>
</CustomField>