force-app/main/default/objects/Booking__c/fields/Bank_Name_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name_Arabic__c</fullName>
    <label>Bank Name_Arabic</label>
    <length>100</length>
    <type>Text</type>
</CustomField>