force-app/main/default/objects/Booking__c/fields/Bank_Name_Service_tax__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name_Service_tax__c</fullName>
    <label>Bank Name (VAT)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>