force-app/main/default/objects/Booking__c/fields/Base_Rate_Used_for_Alter_Area__c.field-meta.xml
<CustomField>
    <fullName>Base_Rate_Used_for_Alter_Area__c</fullName>
    <label>Base Rate Used for Alter Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>