force-app/main/default/objects/Booking__c/fields/BCC_Notice_Sent__c.field-meta.xml
<CustomField>
    <fullName>BCC_Notice_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BCC Notice Sent</label>
    <type>Checkbox</type>
</CustomField>