force-app/main/default/objects/Booking__c/fields/Booking_Age__c.field-meta.xml
<CustomField>
    <fullName>Booking_Age__c</fullName>
    <formula>Today()-DATEVALUE(Booking_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>