force-app/main/default/objects/Booking__c/fields/Booking_Approver_Audit__c.field-meta.xml
<CustomField>
    <fullName>Booking_Approver_Audit__c</fullName>
    <label>Audit Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>