force-app/main/default/objects/Booking__c/fields/Booking_Date_As_Per_The_SBTR__c.field-meta.xml
<CustomField>
    <fullName>Booking_Date_As_Per_The_SBTR__c</fullName>
    <label>Booking Date As Per The SBTR</label>
    <type>Date</type>
</CustomField>