force-app/main/default/objects/Booking__c/fields/Booking_form_Audited_By__c.field-meta.xml
<CustomField>
    <fullName>Booking_form_Audited_By__c</fullName>
    <label>Booking form Audited By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mariana</fullName>
            </value>
            <value>
                <fullName>Aparna</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>