force-app/main/default/objects/Booking__c/fields/Booking_Form_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Booking_Form_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booking Form Uploaded</label>
    <type>Checkbox</type>
</CustomField>