force-app/main/default/objects/Booking__c/fields/Booking_Offers__c.field-meta.xml
<CustomField>
    <fullName>Booking_Offers__c</fullName>
    <label>Booking Offers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>