force-app/main/default/objects/Booking__c/fields/Booking_Validation_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Booking_Validation_Remarks__c</fullName>
    <description>Used for validating legacy data</description>
    <label>Booking Validation Remarks</label>
    <type>TextArea</type>
</CustomField>