force-app/main/default/objects/Booking__c/fields/BookingFormResale20__c.field-meta.xml
<CustomField>
    <fullName>BookingFormResale20__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>only used for changing the clause for send booking form to customer.</inlineHelpText>
    <label>Booking Form (Resale 20%)</label>
    <type>Checkbox</type>
</CustomField>