force-app/main/default/objects/Booking__c/fields/Call_Back_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_Back_Date__c</fullName>
    <label>Call Back Date</label>
    <type>DateTime</type>
</CustomField>