force-app/main/default/objects/Booking__c/fields/Call_Centre_Rep__c.field-meta.xml
<CustomField>
    <fullName>Call_Centre_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Centre Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Booking1</relationshipName>
    <type>Lookup</type>
</CustomField>