force-app/main/default/objects/Booking__c/fields/Call_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Call_Disposition__c</fullName>
    <label>Call Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>