force-app/main/default/objects/Booking__c/fields/Call_Disposition_L3__c.field-meta.xml
<CustomField>
    <fullName>Call_Disposition_L3__c</fullName>
    <label>Call Disposition L3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Customer denied CP booking</fullName>
            </value>
            <value>
                <fullName>Discount Amount</fullName>
            </value>
            <value>
                <fullName>Car Park</fullName>
            </value>
            <value>
                <fullName>Unit Details</fullName>
            </value>
            <value>
                <fullName>Agreement Value</fullName>
            </value>
            <value>
                <fullName>Offer Mismatch</fullName>
            </value>
            <value>
                <fullName>Token Amount not meeting company policy</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Impulsive Booking</fullName>
            </value>
            <value>
                <fullName>Area</fullName>
            </value>
            <value>
                <fullName>Payment Schedule</fullName>
            </value>
            <value>
                <fullName>Possession Date</fullName>
            </value>
            <value>
                <fullName>Amenities</fullName>
            </value>
            <value>
                <fullName>Car Park Allotment</fullName>
            </value>
            <value>
                <fullName>Switched Off</fullName>
            </value>
            <value>
                <fullName>Not Reachable</fullName>
            </value>
            <value>
                <fullName>No. Busy</fullName>
            </value>
            <value>
                <fullName>Wrong No.</fullName>
            </value>
            <value>
                <fullName>Call Back</fullName>
            </value>
            <value>
                <fullName>Number out of Service</fullName>
            </value>
            <value>
                <fullName>Need Clarification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>