force-app/main/default/objects/Booking__c/fields/Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Code</label>
    <referenceTo>Events__c</referenceTo>
    <relationshipLabel>Booking</relationshipLabel>
    <relationshipName>Booking</relationshipName>
    <type>Lookup</type>
</CustomField>