force-app/main/default/objects/Booking__c/fields/Cancel_Swap__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Swap__c</fullName>
    <label>Cancel &amp; Swap</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>