force-app/main/default/objects/Booking__c/fields/Cancellation_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Allocation__c</fullName>
    <label>Cancellation Allocation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Cancellation</fullName>
            </value>
            <value>
                <fullName>Send it to Legal team</fullName>
            </value>
            <value>
                <fullName>Allocate to CRM Team</fullName>
            </value>
            <value>
                <fullName>Allocate to DLD Team</fullName>
            </value>
            <value>
                <fullName>Re Allocated To CRM By Collection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>