force-app/main/default/objects/Booking__c/fields/Cancellation_Approver_1__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Approver_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cancellation Approver 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Booking4</relationshipName>
    <type>Lookup</type>
</CustomField>