force-app/main/default/objects/Booking__c/fields/Cancellation_Approver_2__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Approver_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cancellation Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Booking3</relationshipName>
    <type>Lookup</type>
</CustomField>