force-app/main/default/objects/Booking__c/fields/Cancellation_Charges__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Charges__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cancellation Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>