force-app/main/default/objects/Booking__c/fields/Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date__c</fullName>
    <description>When booking status is unprocessed for more than 7 days, Signed status is null and the Booking date is after june 1st then system cancel the booking automatically</description>
    <inlineHelpText>This field holds the value of cancellation date which is cancelled through system</inlineHelpText>
    <label>Cancellation Date</label>
    <type>DateTime</type>
</CustomField>