force-app/main/default/objects/Booking__c/fields/Cancellation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_End_Date__c</fullName>
    <label>Cancellation End Date</label>
    <type>Date</type>
</CustomField>