force-app/main/default/objects/Booking__c/fields/Cancellation_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_In_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancellation In Progress</label>
    <type>Checkbox</type>
</CustomField>