force-app/main/default/objects/Booking__c/fields/Cancellation_Requested__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Requesed By CRM team by priya</description>
    <label>Cancellation Requested</label>
    <type>Checkbox</type>
</CustomField>