force-app/main/default/objects/Booking__c/fields/Cancellation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Start_Date__c</fullName>
    <label>Cancellation Start Date</label>
    <type>Date</type>
</CustomField>