force-app/main/default/objects/Booking__c/fields/Car_Park_Count_2__c.field-meta.xml
<CustomField>
    <fullName>Car_Park_Count_2__c</fullName>
    <label>Car Park Count 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>