force-app/main/default/objects/Booking__c/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please Select a Channel Partner if Booking Source is &apos;Channel Partner&apos;</inlineHelpText>
    <label>Channel Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Channel_Partner__c.Black_listed_user__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Channel_Partner__c</referenceTo>
    <relationshipLabel>Booking</relationshipLabel>
    <relationshipName>Booking</relationshipName>
    <type>Lookup</type>
</CustomField>