force-app/main/default/objects/Booking__c/fields/City_3__c.field-meta.xml
<CustomField>
    <fullName>City_3__c</fullName>
    <label>City 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adilabad</fullName>
            </value>
            <value>
                <fullName>Ahmedabad City</fullName>
            </value>
            <value>
                <fullName>Amalapuram</fullName>
            </value>
            <value>
                <fullName>Amreli</fullName>
            </value>
            <value>
                <fullName>Anakapalle</fullName>
            </value>
            <value>
                <fullName>Anand</fullName>
            </value>
            <value>
                <fullName>Anantapur</fullName>
            </value>
            <value>
                <fullName>Aurangabad(Bihar)</fullName>
            </value>
            <value>
                <fullName>Banasanktha</fullName>
            </value>
            <value>
                <fullName>Bardoli</fullName>
            </value>
            <value>
                <fullName>Bastar</fullName>
            </value>
            <value>
                <fullName>Begusarai</fullName>
            </value>
            <value>
                <fullName>Bhagalpur</fullName>
            </value>
            <value>
                <fullName>Bharuch</fullName>
            </value>
            <value>
                <fullName>Bhavnagar</fullName>
            </value>
            <value>
                <fullName>Bhimavaram</fullName>
            </value>
            <value>
                <fullName>Bhojpur</fullName>
            </value>
            <value>
                <fullName>Bilaspur</fullName>
            </value>
            <value>
                <fullName>Cachar</fullName>
            </value>
            <value>
                <fullName>Chittoor</fullName>
            </value>
            <value>
                <fullName>Cuddapah</fullName>
            </value>
            <value>
                <fullName>Darbhanga</fullName>
            </value>
            <value>
                <fullName>Darrang</fullName>
            </value>
            <value>
                <fullName>Dibrugarh</fullName>
            </value>
            <value>
                <fullName>Durg</fullName>
            </value>
            <value>
                <fullName>East Champaran</fullName>
            </value>
            <value>
                <fullName>Eluru</fullName>
            </value>
            <value>
                <fullName>Gandhinagar</fullName>
            </value>
            <value>
                <fullName>Gaya</fullName>
            </value>
            <value>
                <fullName>Goalpara</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>