force-app/main/default/objects/Booking__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agra</fullName>
            </value>
            <value>
                <fullName>Ahmedabad</fullName>
            </value>
            <value>
                <fullName>Ajmer</fullName>
            </value>
            <value>
                <fullName>Akola</fullName>
            </value>
            <value>
                <fullName>Aligarh</fullName>
            </value>
            <value>
                <fullName>Allahabad</fullName>
            </value>
            <value>
                <fullName>Ambattu</fullName>
            </value>
            <value>
                <fullName>Amravati</fullName>
            </value>
            <value>
                <fullName>Amritsar</fullName>
            </value>
            <value>
                <fullName>Asansol</fullName>
            </value>
            <value>
                <fullName>Aurangabad</fullName>
            </value>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Bareily</fullName>
            </value>
            <value>
                <fullName>Belgaum</fullName>
            </value>
            <value>
                <fullName>Bhavnagar</fullName>
            </value>
            <value>
                <fullName>Bhilai</fullName>
            </value>
            <value>
                <fullName>Bhiwandi</fullName>
            </value>
            <value>
                <fullName>Bhopal</fullName>
            </value>
            <value>
                <fullName>Bhubaneswar</fullName>
            </value>
            <value>
                <fullName>Bikaner</fullName>
            </value>
            <value>
                <fullName>Chandigarh</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Coimbatore</fullName>
            </value>
            <value>
                <fullName>Cuttack</fullName>
            </value>
            <value>
                <fullName>Dehradun</fullName>
            </value>
            <value>
                <fullName>Deir Al-Assad</fullName>
            </value>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Dhanbad</fullName>
            </value>
            <value>
                <fullName>Durgapur</fullName>
            </value>
            <value>
                <fullName>Erode</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>