force-app/main/default/objects/Booking__c/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <label>Sub Project</label>
    <length>30</length>
    <type>Text</type>
</CustomField>