force-app/main/default/objects/Booking__c/fields/Collected_Days_10__c.field-meta.xml
<CustomField>
    <fullName>Collected_Days_10__c</fullName>
    <label>10 % Collected Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>