force-app/main/default/objects/Booking__c/fields/Collected_Days_20__c.field-meta.xml
<CustomField>
    <fullName>Collected_Days_20__c</fullName>
    <label>20 % Collected Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>