force-app/main/default/objects/Booking__c/fields/Collection_User__c.field-meta.xml
<CustomField>
    <fullName>Collection_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection User</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Collection</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Bookinggrd9</relationshipName>
    <type>Lookup</type>
</CustomField>