force-app/main/default/objects/Booking__c/fields/Comment_Audit__c.field-meta.xml
<CustomField>
    <fullName>Comment_Audit__c</fullName>
    <label>Comment Audit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>