force-app/main/default/objects/Booking__c/fields/Comment_History__c.field-meta.xml
<CustomField>
    <fullName>Comment_History__c</fullName>
    <label>Sales Team Change Comments History</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>